# material-organize

./: .gitignore  AGENTS.md  Brewfile  Makefile  README.md  import_to_materials.py  main.py  pyproject.toml  requirements.txt
.agents/: README.md
.ai/: README.md  shared-context.md
.ai/architecture/: module-boundaries.md
.ai/checklists/: import-change-checklist.md
.ai/memory/: ai-collaboration-decisions.md
.ai/playbooks/: import-workflow.md
.ai/reference/: pixel-judge-extraction-notes.md  project-review-2026-04-12.md
.github/: copilot-instructions.md
docs/: README.md  roadmap.md
docs/ai/: README.md  project-overview.md  shared-context.md
docs/ai/checklists/: import-change-checklist.md
docs/ai/memory/: ai-collaboration-decisions.md
docs/ai/playbooks/: import-workflow.md
docs/ai/reference/: pixel-judge-extraction-notes.md  project-review-2026-04-12.md
docs/operations/: session-handoff.md
docs/superpowers/plans/: 2026-04-12-material-importer.md
docs/superpowers/specs/: 2026-04-12-material-importer-design.md
scripts/: import-here.command  media-import.command  verify-smoke-duplicates.py
src/material_importer/: __init__.py  __main__.py  cli.py  importer.py  manifest.py  metadata.py  planner.py  reporting.py  sources.py
tests/: test_importer.py  test_manifest.py  test_metadata.py  test_planner.py  test_smoke.py  test_sources.py
utils/: file_helper.py
