[project]
name = "material-organize"
version = "0.1.0"
description = "Import Sony RAW photos and videos into materials by trip day."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "rich",
]

[project.scripts]
media-import = "material_importer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/material_importer"]
